--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>中检康健(北京)健康管理有限公司</title>
     <link rel="stylesheet" href="./style.css">
+    <style>
+        @media (max-width: 600px) {
+            .header{
+                display: none;
+            }
+            .main{
+                display: none;
+            }
+            .footer{
+                display: none;
+            }
+            .move{
+                display: block;
+            }
+        }
+        @media (min-width: 600px) {
+            .move{
+                display: none;
+            }
+        }
+    </style>
 </head>
 <body>
+<!-- PC端的代码 -->
     <div class="header">
         <div class="header-01">
             <div class="header-nav">
@@ -37,6 +59,20 @@
                 </ul>
         </nav>  
         <p>备案号ICP备xxxxxxxx号</p>
+    </div>
+
+<!-- 移动端的代码 -->
+    
+    <div class="move">
+       <div class="app-nav">
+           <img src="./img/logo.png" alt="">
+           <h1>中检康健(北京)健康管理有限公司</h1>
+       </div>
+       <div class="app-main">
+           <img src="./img/app-02-01.png" alt="">
+       </div>
+       <span>移动端开发中......</span>
+       <p>请用电脑打开此网页......</p>
     </div>
 </body>
 </html>
