移动端页面改动

--- a/index.html
+++ b/index.html
@@ -62,17 +62,9 @@
     </div>
 
 <!-- 移动端的代码 -->
-    
-    <div class="move">
-       <div class="app-nav">
-           <img src="./img/logo.png" alt="">
-           <h1>中检康健(北京)健康管理有限公司</h1>
-       </div>
-       <div class="app-main">
-           <img src="./img/app-02-01.png" alt="">
-       </div>
-       <span>移动端开发中......</span>
-       <p>请用电脑打开此网页......</p>
-    </div>
+   <div class="app">
+       <img src="./img/app-02-01.png" alt="">
+       <h1>移动页面开发中，请用电脑打开该网页。。。。</h1>
+   </div>
 </body>
 </html>
