移动端弹窗

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             .footer{
                 display: none;
             }
-            .move{
+            .app{
                 display: block;
             }
         }
         @media (min-width: 600px) {
-            .move{
+            .app{
                 display: none;
             }
         }
@@ -63,8 +63,11 @@
 
 <!-- 移动端的代码 -->
    <div class="app">
+   	   <script language="javascript"> //JavaScript脚本标注
+			alert("移动页面开发中，请用电脑打开该网页。");//在页面上弹出上联
+	  </script>
        <img src="./img/app-02-01.png" alt="">
-       <h1>移动页面开发中，请用电脑打开该网页。。。。</h1>
+       <h1>移动页面开发中，请用电脑打开该网页</h1>
    </div>
 </body>
 </html>
